# pinpoint

./: .gitignore  AGENTS.md  README.md  main.py  pyproject.toml
.ai/: dependency-context.json
.github/: copilot-instructions.md
docs/: ai-agent-standards.md
scripts/: export_dependency_context.py  validate_ai_baseline.py
tests/: test_ai_baseline.py
