[project]
name = "pinpoint"
version = "0.1.0"
description = "Dependency-aware AI context baseline for coding agents"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[tool.pinpoint.ai]
context_file = ".ai/dependency-context.json"
context_generator = "python scripts/export_dependency_context.py"

[tool.uv]
# workspace 根虽然没代码，但作为聚合包
package = true

# `uv python install`的不是官网文件，而是这个项目打包的便携版: https://github.com/astral-sh/python-build-standalone/
# 镜像较少，参考: https://github.com/tuna/issues/issues/2125
# 已知镜像站点：
# - https://mirror.nju.edu.cn/github-release/astral-sh/python-build-standalone/
# - https://registry.npmmirror.com/-/binary/python-build-standalone/
# - https://gh-proxy.com/github.com/indygreg/python-build-standalone/releases/download
# 镜像下载示例：
# - uv python install --mirror https://registry.npmmirror.com/-/binary/python-build-standalone/ 3.12
# - UV_PYTHON_INSTALL_MIRROR=https://mirror.nju.edu.cn/github-release/astral-sh/python-build-standalone/ uv python install 3.12
# pyproject.toml config ref: https://docs.astral.sh/uv/reference/settings/#python-install-mirror
python-install-mirror = "https://registry.npmmirror.com/-/binary/python-build-standalone/"

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
